--- a/full-stack.html
+++ b/full-stack.html
@@ -38,6 +38,14 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://the-idea-people.workable.com/j/B71B2F46F9'>The Idea People - Jobs: Senior Full Stack PHP Web Developer - Apply online</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-26</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/LecleVietnam1/743999692351833-fullstack-web-developer'>Lecle Vietnam Fullstack Web Developer | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-26</p>
+<hr/>
 <h5><a href='https://assist-rx.workable.com/j/FE4000554C'>AssistRx - Jobs: Full Stack Developer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
@@ -54,7 +62,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/K4Connect/743999692194360-software-engineer-qa-full-stack-javascript-'>K4Connect Software Engineer - QA (Full Stack JavaScript) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/K4Connect/743999692194360-software-engineer-qa-full-stack-javascript-'>K4Connect Software Engineer - QA (Full Stack JavaScript) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -62,11 +70,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/nutanix/job/oMTCafwb'>Nutanix Careers - MTS - Full Stack Java Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/nutanix/job/oMTCafwb'>Nutanix Careers - MTS - Full Stack Java Developer</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Anitian/743999692312256-full-stack-developer'>Anitian  Full Stack Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Anitian/743999692312256-full-stack-developer'>Anitian  Full Stack Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -100,7 +108,7 @@ Developer to support USAID's Office of Transition Initiatives (OTI). In this pos
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://juniqe.join.com/jobs/265721-mid-senior-full-stack-engineer-f-m-d-berlin-full-time'>Job @ juniqe (Berlin): (Mid/Senior) Full-Stack Eng... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://juniqe.join.com/jobs/265721-mid-senior-full-stack-engineer-f-m-d-berlin-full-time'>Job @ juniqe (Berlin): (Mid/Senior) Full-Stack Eng... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -221,7 +229,7 @@ win prizes and recognition from your peers. Required Qualifications: Minimum 3?.
 <p><span class="badge badge-light">Lisbon Lisbon Lisbon, Portugal</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/gunio/69133cb1-da75-401c-aace-6c06f7c90430'>Gun.io - Full-Stack React + Node Developer with a passion for music</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/gunio/69133cb1-da75-401c-aace-6c06f7c90430'>Gun.io - Full-Stack React + Node Developer with a passion for music</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -265,7 +273,7 @@ win prizes and recognition from your peers. Required Qualifications: Minimum 3?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='http://kurru.applytojob.com/apply/9tVPt070jR/Senior-Full-Stack-Engineer'>Senior Full Stack Engineer - Kurru Talent - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://kurru.applytojob.com/apply/9tVPt070jR/Senior-Full-Stack-Engineer'>Senior Full Stack Engineer - Kurru Talent - Career Page</a></h5> 
 <p><span class="badge badge-light">Dallas, TX</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -277,7 +285,7 @@ win prizes and recognition from your peers. Required Qualifications: Minimum 3?.
 <p><span class="badge badge-light">Toronto</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/thehavasgroup/job/oZRB7fwi'>The Havas Group Careers - Full Stack Developer (Java)</a></h5> 
+<h5><a href='http://jobs.jobvite.com/thehavasgroup/job/oZRB7fwi'>The Havas Group Careers - Full Stack Developer (Java)</a></h5> 
 <p><span class="badge badge-light">Toronto Canada</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -299,7 +307,7 @@ Full Stack Developer in Z?rich (published: 19.07.2019). Apply now or check the?.
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... Apply online for the job of Software Engineer - Full Stack at STAQ.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.workable.com/j/5CBDEA38F7'>KNOREX - Jobs: Full Stack Engineer (Javascript) - Apply online</a></h5> 
+<h5><a href='https://www.workable.com/j/5CBDEA38F7'>KNOREX - Jobs: Full Stack Engineer (Javascript) - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... Apply online for the job of Full Stack Engineer (Javascript) at KNOREX.</p>
 <hr/>
@@ -342,7 +350,7 @@ the job details and apply today!</p>
 <p><span class="badge badge-light">San Francisco Mountain View Vancouver Toronto London Paris Berlin Denver Canada</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/AroghiaGroup/743999692146692-pdm-full-stack-engineer'>Aroghia Group PDM Full Stack Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/AroghiaGroup/743999692146692-pdm-full-stack-engineer'>Aroghia Group PDM Full Stack Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Beaverton, OR, USA</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -375,7 +383,7 @@ Limited.</p>
 machine learning engineers, to craft and implement new product features. You 
 also?...</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/webmd/job/ohlwafw2'>WebMD Careers - Full Stack Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/webmd/job/ohlwafw2'>WebMD Careers - Full Stack Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... WebMD is searching for a Full Stack Developer. This person will collaborate with 
 a full team of technology professionals to take projects from design specs to?...</p>
@@ -458,7 +466,7 @@ This position reports to: Manager, Application Development. ServiceNow is?...</p
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/dharma/jobs/4364921002'>Job Application for Full Stack Engineer at Dharma</a></h5> 
+<h5><a href='https://boards.greenhouse.io/dharma/jobs/4364921002'>Job Application for Full Stack Engineer at Dharma</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -468,14 +476,6 @@ This position reports to: Manager, Application Development. ServiceNow is?...</p
 <hr/>
 <h5><a href='https://jobs.lever.co/medium/264207b8-71cc-4492-be87-419edfabd5b4'>Medium - Senior Full Stack Engineer, Embedly</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
-<p>Posted on: 2019-07-21</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999692014279-full-stack-software-developer-devops-fur-simulation-automatisiertes-fahren'>Bosch Group Full-Stack Software Developer (DevOps) f?r Simulation Automatisiertes Fahren | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-21</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999692022158-full-stack-softwareentwickler-in-c-python-re-compute-environment-im-bereich-automatisiertes-fahren'>Bosch Group Full-Stack Softwareentwickler*in (C++, Python) Re-Compute-Environment im Bereich Automatisiertes Fahren | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
 
